--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,27 +2,27 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/nav_home"
+        android:id="@+id/matchScheduleFragment"
         android:icon="@drawable/ic_home"
         android:title="Home" />
 
     <item
-        android:id="@+id/nav_predictions"
+        android:id="@+id/predictionsFragment"
         android:icon="@drawable/ic_star"
         android:title="Predictions" />
 
     <item
-        android:id="@+id/nav_history"
+        android:id="@+id/predictionHistoryFragment"
         android:icon="@drawable/ic_history"
         android:title="History" />
 
     <item
-        android:id="@+id/nav_stats"
+        android:id="@+id/statsFragment"
         android:icon="@drawable/ic_stats"
         android:title="My stat" />
 
     <item
-        android:id="@+id/nav_blog"
+        android:id="@+id/blogFragment"
         android:icon="@drawable/ic_blog"
         android:title="Blog" />
 
