--- a/app/src/main/res/layout/fragment_match_detail.xml
+++ b/app/src/main/res/layout/fragment_match_detail.xml
@@ -90,239 +90,254 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                app:cornerRadius="20dp"
                 android:backgroundTint="#FFCE01"
                 android:fontFamily="@font/montserrat_medium"
                 android:minHeight="48dp"
                 android:paddingHorizontal="24dp"
                 android:text="Make a Forecast"
-                android:textColor="#000000" />
+                android:textAllCaps="false"
+                android:textColor="#000000"
+                android:textSize="15sp"
+                app:cornerRadius="20dp" />
         </LinearLayout>
 
-        <LinearLayout
+        <androidx.cardview.widget.CardView
+            android:id="@+id/toggleCard"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="20dp"
-            android:layout_marginTop="30dp"
-            android:orientation="vertical">
+            android:layout_marginTop="20dp"
+            app:cardBackgroundColor="#171717"
+            app:cardCornerRadius="100dp"
+            app:cardElevation="0dp">
 
-            <com.google.android.material.button.MaterialButtonToggleGroup
+            <LinearLayout
                 android:id="@+id/toggleGroup"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/toggle_group_background"
-                app:checkedButton="@+id/btnMatchInfo"
+                android:gravity="center"
+                android:orientation="horizontal"
                 android:paddingHorizontal="10dp"
-                app:selectionRequired="true"
-                android:paddingVertical="5dp"
-                app:singleSelection="true">
+                android:paddingVertical="5dp">
+
 
                 <com.google.android.material.button.MaterialButton
-                    android:id="@+id/btnMatchInfo"
-                    style="@style/Widget.MyApp.ToggleButton"
+                    android:id="@+id/btnToday"
                     android:layout_width="0dp"
-                    android:layout_height="48dp"
+                    android:layout_height="45dp"
                     android:layout_weight="1"
-                    android:text="Match Info" />
+                    android:fontFamily="@font/montserrat_regular"
+                    android:text="Match info"
+                    android:textAllCaps="false"
+                    android:textColor="#000000"
+                    android:textSize="13sp"
+                    app:backgroundTint="#FFCE01"
+                    app:cornerRadius="100dp"
+                    app:strokeWidth="0dp" />
 
                 <com.google.android.material.button.MaterialButton
-                    android:id="@+id/btnMatchNotes"
-                    style="@style/Widget.MyApp.ToggleButton"
+                    android:id="@+id/btnTomorrow"
                     android:layout_width="0dp"
-                    android:layout_height="48dp"
+                    android:layout_height="45dp"
                     android:layout_weight="1"
-                    android:text="Match Notes" />
-            </com.google.android.material.button.MaterialButtonToggleGroup>
+                    android:fontFamily="@font/montserrat_regular"
+                    android:text="Match Notes"
+                    android:textAllCaps="false"
+                    android:textColor="#FFFFFF"
+                    android:textSize="13sp"
+                    app:backgroundTint="@android:color/transparent"
+                    app:cornerRadius="100dp"
+                    app:strokeWidth="0dp" />
 
-        </LinearLayout>
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
 
 
-        <LinearLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
             android:layout_marginHorizontal="20dp"
+            android:layout_marginTop="10dp"
             android:orientation="vertical">
 
             <!-- 1. Date -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="35dp"
+                android:layout_marginBottom="6dp"
                 android:background="@drawable/bg_date_linear"
-                android:orientation="horizontal"
                 android:gravity="center_vertical"
-                android:paddingHorizontal="20dp"
-                android:layout_marginBottom="6dp">
+                android:orientation="horizontal"
+                android:paddingHorizontal="20dp">
 
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:fontFamily="@font/montserrat_regular"
                     android:text="Date"
                     android:textColor="#FFFFFF"
-                    android:textSize="16sp"
-                    android:fontFamily="@font/montserrat_regular" />
+                    android:textSize="16sp" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:fontFamily="@font/montserrat_medium"
                     android:text="12.07.2025"
                     android:textColor="#FFFFFF"
-                    android:textSize="16sp"
-                    android:fontFamily="@font/montserrat_medium" />
+                    android:textSize="16sp" />
             </LinearLayout>
 
             <!-- 2. Time -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="35dp"
+                android:layout_marginBottom="6dp"
                 android:background="@drawable/bg_date_linear"
-                android:orientation="horizontal"
                 android:gravity="center_vertical"
-                android:paddingHorizontal="20dp"
-                android:layout_marginBottom="6dp">
+                android:orientation="horizontal"
+                android:paddingHorizontal="20dp">
 
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:fontFamily="@font/montserrat_regular"
                     android:text="Time"
                     android:textColor="#FFFFFF"
-                    android:textSize="16sp"
-                    android:fontFamily="@font/montserrat_regular" />
+                    android:textSize="16sp" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:fontFamily="@font/montserrat_medium"
                     android:text="18:30"
                     android:textColor="#FFFFFF"
-                    android:textSize="16sp"
-                    android:fontFamily="@font/montserrat_medium" />
+                    android:textSize="16sp" />
             </LinearLayout>
 
             <!-- 3. Country -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="35dp"
+                android:layout_marginBottom="6dp"
                 android:background="@drawable/bg_date_linear"
-                android:orientation="horizontal"
                 android:gravity="center_vertical"
-                android:paddingHorizontal="20dp"
-                android:layout_marginBottom="6dp">
+                android:orientation="horizontal"
+                android:paddingHorizontal="20dp">
 
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:fontFamily="@font/montserrat_regular"
                     android:text="Country"
                     android:textColor="#FFFFFF"
-                    android:textSize="16sp"
-                    android:fontFamily="@font/montserrat_regular" />
+                    android:textSize="16sp" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:fontFamily="@font/montserrat_medium"
                     android:text="India"
                     android:textColor="#FFFFFF"
-                    android:textSize="16sp"
-                    android:fontFamily="@font/montserrat_medium" />
+                    android:textSize="16sp" />
             </LinearLayout>
 
             <!-- 4. City -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="35dp"
+                android:layout_marginBottom="6dp"
                 android:background="@drawable/bg_date_linear"
-                android:orientation="horizontal"
                 android:gravity="center_vertical"
-                android:paddingHorizontal="20dp"
-                android:layout_marginBottom="6dp">
+                android:orientation="horizontal"
+                android:paddingHorizontal="20dp">
 
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:fontFamily="@font/montserrat_regular"
                     android:text="City"
                     android:textColor="#FFFFFF"
-                    android:textSize="16sp"
-                    android:fontFamily="@font/montserrat_regular" />
+                    android:textSize="16sp" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:fontFamily="@font/montserrat_medium"
                     android:text="Mumbai"
                     android:textColor="#FFFFFF"
-                    android:textSize="16sp"
-                    android:fontFamily="@font/montserrat_medium" />
+                    android:textSize="16sp" />
             </LinearLayout>
 
             <!-- 5. Stadium -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="35dp"
+                android:layout_marginBottom="6dp"
                 android:background="@drawable/bg_date_linear"
-                android:orientation="horizontal"
                 android:gravity="center_vertical"
-                android:paddingHorizontal="20dp"
-                android:layout_marginBottom="6dp">
+                android:orientation="horizontal"
+                android:paddingHorizontal="20dp">
 
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:fontFamily="@font/montserrat_regular"
                     android:text="Stadium"
                     android:textColor="#FFFFFF"
-                    android:textSize="16sp"
-                    android:fontFamily="@font/montserrat_regular" />
+                    android:textSize="16sp" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:fontFamily="@font/montserrat_medium"
                     android:text="Wankhede Stadium"
                     android:textColor="#FFFFFF"
-                    android:textSize="16sp"
-                    android:fontFamily="@font/montserrat_medium" />
+                    android:textSize="16sp" />
             </LinearLayout>
 
             <!-- 6. Match Type -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="35dp"
+                android:layout_marginBottom="12dp"
                 android:background="@drawable/bg_date_linear"
-                android:orientation="horizontal"
                 android:gravity="center_vertical"
-                android:paddingHorizontal="20dp"
-                android:layout_marginBottom="12dp">
+                android:orientation="horizontal"
+                android:paddingHorizontal="20dp">
 
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:fontFamily="@font/montserrat_regular"
                     android:text="Match Type"
                     android:textColor="#FFFFFF"
-                    android:textSize="16sp"
-                    android:fontFamily="@font/montserrat_regular" />
+                    android:textSize="16sp" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:fontFamily="@font/montserrat_medium"
                     android:text="T20"
                     android:textColor="#FFFFFF"
-                    android:textSize="16sp"
-                    android:fontFamily="@font/montserrat_medium" />
+                    android:textSize="16sp" />
             </LinearLayout>
 
             <!-- 7. Note -->
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Note: A will face Team B in a highly anticipated clsh...."
-                android:textColor="#FFFFFF"
-                android:textSize="14sp"
+                android:layout_marginTop="4dp"
                 android:fontFamily="@font/montserrat_regular"
                 android:lineSpacingExtra="2dp"
-                android:layout_marginTop="4dp" />
+                android:text="Note: A will face Team B in a highly anticipated clsh...."
+                android:textColor="#FFFFFF"
+                android:textSize="14sp" />
 
         </LinearLayout>
 
