--- a/app/src/main/res/layout/fragment_match_schedule.xml
+++ b/app/src/main/res/layout/fragment_match_schedule.xml
@@ -301,6 +301,7 @@
                 android:id="@+id/recycler_matcher"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 android:layout_marginTop="20dp"
                 tools:listitem="@layout/match_item"
                 android:layout_gravity="bottom"/>
