--- a/app/src/main/res/layout/fragment_predictions.xml
+++ b/app/src/main/res/layout/fragment_predictions.xml
@@ -45,6 +45,7 @@
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             android:layout_marginHorizontal="10dp"
             android:layout_marginBottom="10dp"/>
 
