--- a/app/src/main/res/navigation/secondgraph.xml
+++ b/app/src/main/res/navigation/secondgraph.xml
@@ -9,7 +9,11 @@
         android:id="@+id/matchScheduleFragment"
         android:name="be.buithg.etghaifgte.presentation.ui.fragments.main.MatchScheduleFragment"
         android:label="fragment_match_schedule"
-        tools:layout="@layout/fragment_match_schedule" />
+        tools:layout="@layout/fragment_match_schedule" >
+        <action
+            android:id="@+id/action_matchScheduleFragment_to_matchDetailFragment"
+            app:destination="@id/matchDetailFragment" />
+    </fragment>
     <fragment
         android:id="@+id/statsFragment"
         android:name="be.buithg.etghaifgte.presentation.ui.fragments.main.StatsFragment"
@@ -30,4 +34,9 @@
         android:name="be.buithg.etghaifgte.presentation.ui.fragments.main.BlogFragment"
         android:label="fragment_blog"
         tools:layout="@layout/fragment_blog" />
+    <fragment
+        android:id="@+id/matchDetailFragment"
+        android:name="be.buithg.etghaifgte.presentation.ui.fragments.main.MatchDetailFragment"
+        android:label="fragment_match_detail"
+        tools:layout="@layout/fragment_match_detail" />
 </navigation>
