--- a/app/src/main/res/layout/fragment_blog_detail.xml
+++ b/app/src/main/res/layout/fragment_blog_detail.xml
@@ -56,7 +56,7 @@
                     android:textSize="30sp" />
 
                 <com.google.android.material.imageview.ShapeableImageView
-                    android:id="@+id/imageView2"
+                    android:id="@+id/headerImage"
                     android:layout_width="match_parent"
                     android:layout_height="300dp"
                     android:layout_marginTop="10dp"
@@ -84,6 +84,7 @@
                         android:padding="12dp">
 
                         <com.google.android.material.imageview.ShapeableImageView
+                            android:id="@+id/itemImage"
                             android:layout_width="80dp"
                             android:layout_height="80dp"
                             android:src="@drawable/blog_image_1"
@@ -98,6 +99,7 @@
                             android:layout_marginStart="12dp">
 
                             <TextView
+                                android:id="@+id/itemTitle"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:text="How to analyze team for smarter betting"
@@ -111,10 +113,11 @@
                 </androidx.cardview.widget.CardView>
 
               <TextView
-                  android:layout_width="wrap_content"
+                  android:id="@+id/articleText"
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
                   android:textColor="@color/white"
                   android:fontFamily="@font/montserrat_regular"
-                  android:layout_height="wrap_content"
                   android:text="jfksfjls"/>
             </LinearLayout>
 
