--- a/app/src/main/res/layout/custom_bottom_navigation.xml
+++ b/app/src/main/res/layout/custom_bottom_navigation.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:background="#171717"
-    android:paddingTop="10dp">
+    android:paddingVertical="10dp">
 
     <LinearLayout
         android:id="@+id/navHome"
@@ -153,6 +153,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Achievements"
+            android:lines="1"
             android:textSize="12sp"
             android:textColor="@color/custom_nav_item_color" />
     </LinearLayout>
