--- a/app/src/main/res/drawable/bg_league_chip.xml
+++ b/app/src/main/res/drawable/bg_league_chip.xml
@@ -1,5 +1,6 @@
+
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#FF8514"/> <!-- цвет по умолчанию -->
+    <solid android:color="#FF8514"/>
     <corners android:radius="16dp" />
 </shape>
