--- a/app/src/main/res/drawable/bg_date_linear.xml
+++ b/app/src/main/res/drawable/bg_date_linear.xml
@@ -1,4 +1,4 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <solid android:color="@color/black" /> <!-- тёмный фон -->
-    <corners android:radius="12dp" /> <!-- скругление -->
+    <solid android:color="@color/black" />
+    <corners android:radius="12dp" />
 </shape>
