--- a/app/src/main/res/layout/fragment_match_detail.xml
+++ b/app/src/main/res/layout/fragment_match_detail.xml
@@ -28,6 +28,16 @@
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnHelp">
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:fillViewport="true">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -376,6 +386,9 @@
                 android:visibility="gone" />
 
         </LinearLayout>
+            </LinearLayout>
+
+        </ScrollView>
 
 
     </LinearLayout>
