--- a/app/src/main/res/layout/custom_bottom_navigation.xml
+++ b/app/src/main/res/layout/custom_bottom_navigation.xml
@@ -53,6 +53,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Predictions"
+            android:ellipsize="end"
             android:textSize="12sp"
             android:textColor="@color/custom_nav_item_color" />
     </LinearLayout>
